# wl-gammarelay-rs

./: Cargo.toml  README.md  toggle-invert-display.sh  wlr-gamma-control-unstable-v1.xml
.github/workflows/: rust.yml
scripts/: README.md  auto-temperature.py
src/: color.rs  dbus.rs  dbus_client.rs  dbus_server.rs  main.rs  wayland.rs
