[package]
name = "wl-gammarelay-rs"
version = "0.3.1"
authors = ["Max Verevkin <maxxverrr@gmail.com>"]
edition = "2021"
description = "A simple program that provides DBus interface to control display temperature and brightness under wayland without flickering"
repository = "https://github.com/MaxVerevkin/wl-gammarelay-rs"
license = "GPL-3.0-only"
keywords = ["redshift", "gammastep", "wayland", "night-mode"]

[dependencies]
anyhow = "1.0"
memmap2 = "0.8"
shmemfdrs = { version = "0.1", features = ["memfd"] }
futures = { version = "0.3", default-features = false }
zbus = { version = "3.5", default-features = false, features = ["tokio"] }
clap = { version = "4.0", features = ["derive"] }
wayrs-client = { version = "0.12", features = ["tokio"] }
wayrs-protocols = { version = "0.12", features = ["wlr-gamma-control-unstable-v1"] }
bytemuck = "1.13.0"

[dependencies.tokio]
version = "1.21"
features = ["macros", "net", "rt", "sync"]

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
