[package]
name = "wl-gammarelay-rs"
version = "0.3.2"
authors = ["Max Verevkin <maxxverrr@gmail.com>"]
edition = "2021"
description = "A simple program that provides DBus interface to control display temperature and brightness under wayland without flickering"
repository = "https://github.com/MaxVerevkin/wl-gammarelay-rs"
license = "GPL-3.0-only"
keywords = ["redshift", "gammastep", "wayland", "night-mode"]

[dependencies]
anyhow = "1.0"
bytemuck = "1.13"
clap = { version = "4.0", default-features = false, features = ["std", "help", "usage", "derive"] }
libc = "0.2"
memmap2 = "0.9"
rustbus-service = { git = "https://github.com/MaxVerevkin/rustbus-service", rev = "0c72f36" }
shmemfdrs = { version = "0.1", features = ["memfd"] }
wayrs-client = "1.0"
wayrs-protocols = { version = "0.13", features = ["wlr-gamma-control-unstable-v1"] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
