[package]
name = "wl-gammarelay-rs"
version = "0.4.0"
authors = ["Max Verevkin <maxxverrr@gmail.com>"]
edition = "2021"
description = "A simple program that provides DBus interface to control display temperature and brightness under wayland without flickering"
repository = "https://github.com/MaxVerevkin/wl-gammarelay-rs"
license = "GPL-3.0-only"
keywords = ["redshift", "gammastep", "wayland", "night-mode"]

[dependencies]
anyhow = "1.0"
bytemuck = "1.13"
clap = { version = "4.0", default-features = false, features = ["std", "help", "usage", "derive"] }
libc = "0.2"
memmap2 = "0.9"
rustbus-service = { git = "https://github.com/MaxVerevkin/rustbus-service", rev = "7401913" }
shmemfdrs2 = "1.0"
wayrs-client = "1.0"
wayrs-protocols = { version = "0.13", features = ["wlr-gamma-control-unstable-v1"] }

# [patch.'https://github.com/KillingSpark/rustbus']
# rustbus = { path = "../rustbus/rustbus" }
# [patch.'https://github.com/MaxVerevkin/rustbus-service']
# rustbus-service = { path = "../rustbus-service" }
# [patch.crates-io]
# wayrs-client = { path = "../wayrs/wayrs-client" }
# wayrs-protocols = { path = "../wayrs/wayrs-protocols" }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
